name:                tidal-mondo
version:             0.0.2
synopsis:            Mondo Parser for TidalCycles
-- description:
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          tristan@midirus.com
Stability:           Experimental
Copyright:           (c) Tristan de Cacqueray and contributors, 2025
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 9.12.2

Extra-source-files: README.md

Description: A Mondo parser for TidalCycles.

library
  ghc-options: -Wall
  hs-source-dirs:
                 src

  default-language:    Haskell2010

  Exposed-modules:     Mondo
  other-modules:       Mondo.Eval
                       Mondo.Parser
                       Mondo.Tidal
                       Mondo.Token
                       Mondo.Params

  Build-depends:
      base >=4.8 && <5
    , containers <0.9
    , parsec >=3.1.12 && <3.2
    , tidal-core >= 1.10.0 && < 1.11.0

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  other-modules: MondoTest
  build-depends:
                base ==4.*
              , hspec >=2.11.9
              , tidal-mondo
              , tidal-core

source-repository head
  type:     git
  location: https://codeberg.org/uzu/tidal
